# python_training

./: .gitignore  add_contacts.py  check_db_connection.py  conftest.py  contact.py  pyproject.toml  python_training.git  requirements.txt  test_add_contacts.py  test_add_group.py
.github/actions/cache-node-module/: action.yml
.github/actions/cache-node-modules/: action.yml
.github/workflows/: cache.yml  cicd.yml  docker.yml  first workflow.yml  first_fw.yml  second_workflow.yml  wf_3.yml  workflow14.yml
data/: add_group.py  contacts.json  dataset_group.json  group.py
fixture/: application.py  contact.py  db.py  group.py  orm.py  session.py
generator/: contact.py  group.py
model/: contact.py  group.py
test/: target.json  test_add_contact_in_group.py  test_add_contacts.py  test_add_del_contact_in_group.py  test_add_group.py  test_check_contact_homepage_editpage_14.py  test_check_contact_homepage_vs_db_21.py  test_db_matches_ui.py  test_del_all_group.py  test_del_contacts.py  test_del_group.py  test_mod_contacts.py  test_mod_group.py  test_phones.py  test_temp1.py  test_test.py
