[project]
name = "python-training"
version = "0.1.0"
description = ""
authors = [
    {name = "dpf"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "jsonpickle (>=4.1.1,<5.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pony (>=0.7.19,<0.8.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "mysql (>=0.0.3,<0.0.4)",
    "mysql-connector-python (>=9.5.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
